<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Delete">

    <EditText
        android:id="@+id/txt_id_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/txt_id"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <EditText
        android:id="@+id/txt_nombre_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/txt_nombre"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_delete" />

    <EditText
        android:id="@+id/txt_telefono_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/txt_telefono"
        android:inputType="phone"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_delete" />

    <EditText
        android:id="@+id/txt_email_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefono_delete" />

    <Button
        android:id="@+id/boton_buscar_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#00887B"
        android:onClick="Buscar_delete"
        android:text="@string/boton_buscar"
        android:textColor="#F7FD18"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email_delete" />

    <Button
        android:id="@+id/boton_eliminar_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#00887B"
        android:onClick="Eliminar"
        android:text="@string/boton_eliminar"
        android:textColor="#F7FD18"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_buscar_delete" />

    <Button
        android:id="@+id/boton_regresar_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="#F7FD18"
        android:onClick="Regresar_delete"
        android:text="@string/boton_regresar"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_eliminar_delete" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="163dp"
        android:background="#00877B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_menu_borrar"
        android:textColor="#F6FC18"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />

</androidx.constraintlayout.widget.ConstraintLayout>