<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Read">

    <EditText
        android:id="@+id/txt_id_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/txt_id"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <Button
        android:id="@+id/boton_buscar_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#00887B"
        android:onClick="Buscar"
        android:text="@string/boton_buscar"
        android:textColor="#F7FD18"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email_read" />

    <Button
        android:id="@+id/boton_regresar_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="#F8FE18"
        android:onClick="Regresar_read"
        android:text="@string/boton_regresar"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_buscar_read" />

    <EditText
        android:id="@+id/txt_telefono_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/txt_telefono"
        android:inputType="phone"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_read" />

    <EditText
        android:id="@+id/txt_email_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefono_read" />

    <EditText
        android:id="@+id/txt_nombre_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/txt_nombre"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_read" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="163dp"
        android:background="#00877B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_menu_mostrar"
        android:textColor="#F7FD18"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

</androidx.constraintlayout.widget.ConstraintLayout>