<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="163dp"
        android:background="#00897B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/txt_menu"
        android:textColor="#F8FE19"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#00887B"
        android:onClick="Read"
        android:text="@string/boton_read"
        android:textColor="#F7FD18"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_create" />

    <Button
        android:id="@+id/boton_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#00887B"
        android:onClick="Update"
        android:text="@string/boton_update"
        android:textColor="#F7FD18"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_read" />

    <Button
        android:id="@+id/boton_eliminar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#00887B"
        android:onClick="Delete"
        android:text="@string/boton_delete"
        android:textColor="#F7FD18"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_update" />

    <Button
        android:id="@+id/boton_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#00887B"
        android:onClick="Create"
        android:text="@string/boton_create"
        android:textColor="#F7FD18"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>